Projet GL/test/src/test/deca/context/valid/increment1/print-float.deca
// Résultats : 2.7

// Historique :
//  cree le 09/01/2023

{
    float a = 2.7;
    println(a);
}